stderr
PrinterTest.java:18: error: ';' expected
        String result = ""
                          ^
PrinterTest.java:24: error: reached end of file while parsing
}
 ^
2 errors
